crates/parser/src/snapshots/squawk_parser__parse__tests__parse_generated_column.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterTableStmt(
                AlterTableStmt {
                    cmds: [
                        AlterTableCmd(
                            AlterTableCmd {
                                subtype: AddColumn,
                                name: None,
                                def: Some(
                                    ColumnDef(
                                        ColumnDef {
                                            colname: Some(
                                                "c",
                                            ),
                                            type_name: TypeName {
                                                names: [
                                                    QualifiedName {
                                                        string: PGString {
                                                            sval: "pg_catalog",
                                                        },
                                                    },
                                                    QualifiedName {
                                                        string: PGString {
                                                            sval: "bool",
                                                        },
                                                    },
                                                ],
                                                type_oid: None,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 34,
                                            },
                                            constraints: [
                                                Constraint(
                                                    Constraint {
                                                        conname: None,
                                                        contype: Generated,
                                                        location: Some(
                                                            42,
                                                        ),
                                                        raw_expr: Some(
                                                            Object({
                                                                "NullTest": Object({
                                                                    "arg": Object({
                                                                        "ColumnRef": Object({
                                                                            "fields": Array([
                                                                                Object({
                                                                                    "String": Object({
                                                                                        "sval": String(
                                                                                            "p",
                                                                                        ),
                                                                                    }),
                                                                                }),
                                                                            ]),
                                                                            "location": Number(
                                                                                63,
                                                                            ),
                                                                        }),
                                                                    }),
                                                                    "location": Number(
                                                                        65,
                                                                    ),
                                                                    "nulltesttype": String(
                                                                        "IS_NOT_NULL",
                                                                    ),
                                                                }),
                                                            }),
                                                        ),
                                                        keys: None,
                                                        indexname: None,
                                                        skip_validation: false,
                                                        initially_valid: false,
                                                    },
                                                ),
                                                Constraint(
                                                    Constraint {
                                                        conname: None,
                                                        contype: NotNull,
                                                        location: Some(
                                                            85,
                                                        ),
                                                        raw_expr: None,
                                                        keys: None,
                                                        indexname: None,
                                                        skip_validation: false,
                                                        initially_valid: false,
                                                    },
                                                ),
                                            ],
                                            is_local: true,
                                            location: 32,
                                        },
                                    ),
                                ),
                                behavior: Restrict,
                                missing_ok: false,
                            },
                        ),
                    ],
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: None,
                        relname: "table_c",
                        inh: true,
                        relpersistence: "p",
                        alias: None,
                        location: 13,
                    },
                    objtype: Table,
                    missing_ok: false,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                93,
            ),
        },
    ],
)
