crates/parser/src/snapshots/squawk_parser__parse__tests__parse_inh.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterTableStmt(
                AlterTableStmt {
                    cmds: [
                        AlterTableCmd(
                            AlterTableCmd {
                                subtype: DropConstraint,
                                name: Some(
                                    "tasks_fk",
                                ),
                                def: None,
                                behavior: Restrict,
                                missing_ok: false,
                            },
                        ),
                        AlterTableCmd(
                            AlterTableCmd {
                                subtype: AddConstraint,
                                name: None,
                                def: Some(
                                    Constraint(
                                        Constraint {
                                            conname: Some(
                                                "tasks_fk",
                                            ),
                                            contype: Foreign,
                                            location: Some(
                                                69,
                                            ),
                                            raw_expr: None,
                                            keys: None,
                                            indexname: None,
                                            skip_validation: true,
                                            initially_valid: false,
                                        },
                                    ),
                                ),
                                behavior: Restrict,
                                missing_ok: false,
                            },
                        ),
                    ],
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: Some(
                            "public",
                        ),
                        relname: "tasks",
                        inh: false,
                        relpersistence: "p",
                        alias: None,
                        location: 18,
                    },
                    objtype: Table,
                    missing_ok: false,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                193,
            ),
        },
        RawStmt {
            stmt: AlterTableStmt(
                AlterTableStmt {
                    cmds: [
                        AlterTableCmd(
                            AlterTableCmd {
                                subtype: ValidateConstraint,
                                name: Some(
                                    "tasks_fk",
                                ),
                                def: None,
                                behavior: Restrict,
                                missing_ok: false,
                            },
                        ),
                    ],
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: Some(
                            "public",
                        ),
                        relname: "tasks",
                        inh: true,
                        relpersistence: "p",
                        alias: None,
                        location: 208,
                    },
                    objtype: Table,
                    missing_ok: false,
                },
            ),
            stmt_location: 194,
            stmt_len: Some(
                55,
            ),
        },
    ],
)
