crates/parser/src/snapshots/squawk_parser__parse__tests__parse_sql_create_index_concurrently.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    access_method: "btree",
                    idxname: Some(
                        "table_name_idx",
                    ),
                    index_params: [
                        IndexElem(
                            IndexElem {
                                name: Some(
                                    "table_field",
                                ),
                                expr: None,
                                indexcolname: None,
                                collation: None,
                                opclass: [],
                                ordering: Default,
                                nulls_ordering: Default,
                            },
                        ),
                    ],
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: None,
                        relname: "table_name",
                        inh: true,
                        relpersistence: "p",
                        alias: None,
                        location: 46,
                    },
                    concurrent: true,
                    unique: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    if_not_exists: false,
                    table_space: None,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                74,
            ),
        },
    ],
)
