crates/parser/src/snapshots/squawk_parser__parse__tests__parsing_variable_set_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: VariableSetStmt(
                Object({
                    "args": Array([
                        Object({
                            "A_Const": Object({
                                "location": Number(
                                    25,
                                ),
                                "sval": Object({
                                    "sval": String(
                                        "1",
                                    ),
                                }),
                            }),
                        }),
                    ]),
                    "kind": String(
                        "VAR_SET_VALUE",
                    ),
                    "name": String(
                        "my.vars.id",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                28,
            ),
        },
    ],
)
