crates/parser/src/snapshots/squawk_parser__parse__tests__parsing_variable_show_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: VariableShowStmt(
                Object({
                    "name": String(
                        "name",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: None,
        },
    ],
)
