crates/parser/src/snapshots/squawk_parser__parse__tests__refresh_material_view_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: RefreshMatViewStmt(
                Object({
                    "relation": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            27,
                        ),
                        "relname": String(
                            "order_summary",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                40,
            ),
        },
        RawStmt {
            stmt: RefreshMatViewStmt(
                Object({
                    "relation": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            68,
                        ),
                        "relname": String(
                            "annual_statistics_basis",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                    "skipData": Bool(
                        true,
                    ),
                }),
            ),
            stmt_location: 41,
            stmt_len: Some(
                63,
            ),
        },
    ],
)
