crates/parser/src/snapshots/squawk_parser__parse__tests__rule_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: RuleStmt(
                Object({
                    "actions": Array([
                        Object({
                            "SelectStmt": Object({
                                "fromClause": Array([
                                    Object({
                                        "RangeVar": Object({
                                            "inh": Bool(
                                                true,
                                            ),
                                            "location": Number(
                                                83,
                                            ),
                                            "relname": String(
                                                "t2",
                                            ),
                                            "relpersistence": String(
                                                "p",
                                            ),
                                        }),
                                    }),
                                ]),
                                "limitOption": String(
                                    "LIMIT_OPTION_DEFAULT",
                                ),
                                "op": String(
                                    "SETOP_NONE",
                                ),
                                "targetList": Array([
                                    Object({
                                        "ResTarget": Object({
                                            "location": Number(
                                                76,
                                            ),
                                            "val": Object({
                                                "ColumnRef": Object({
                                                    "fields": Array([
                                                        Object({
                                                            "A_Star": Object({}),
                                                        }),
                                                    ]),
                                                    "location": Number(
                                                        76,
                                                    ),
                                                }),
                                            }),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                    ]),
                    "event": String(
                        "CMD_SELECT",
                    ),
                    "instead": Bool(
                        true,
                    ),
                    "relation": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            43,
                        ),
                        "relname": String(
                            "t1",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                    "rulename": String(
                        "_RETURN",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                85,
            ),
        },
        RawStmt {
            stmt: RuleStmt(
                Object({
                    "actions": Array([
                        Object({
                            "NotifyStmt": Object({
                                "conditionname": String(
                                    "mytable",
                                ),
                            }),
                        }),
                    ]),
                    "event": String(
                        "CMD_UPDATE",
                    ),
                    "relation": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            126,
                        ),
                        "relname": String(
                            "mytable",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                    "rulename": String(
                        "notify_me",
                    ),
                }),
            ),
            stmt_location: 86,
            stmt_len: Some(
                70,
            ),
        },
    ],
)
